# beanie-index-demo

./: .gitignore  README.md  pyproject.toml  run.sh
articles/: eng.md
beanie_index_demo/: app_factory.py  routes.py
beanie_index_demo/maps/: Berlin, City Spy Map.kml
beanie_index_demo/models/: data_models.py  interface_models.py
tests/: test_beanie_index_demo.py
